--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
   <title>Chatty 익명채팅</title>
   <script>
     // Mobile Height Config
@@ -21,8 +21,8 @@
     window.addEventListener('resize', mobileHeight);
     mobileHeight();
   </script>
-  <script type="module" crossorigin src="/assets/index.68852bb1.js"></script>
-  <link rel="stylesheet" href="/assets/index.68e6d1d1.css">
+  <script type="module" crossorigin src="/assets/index.e86c1740.js"></script>
+  <link rel="stylesheet" href="/assets/index.78da0a69.css">
 </head>
 
 <body>
