--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,15 @@
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
   <title>Chatty 익명채팅</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-CFJ6NBV11R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-CFJ6NBV11R');
+  </script>
   <script>
     // Mobile Height Config
     let timeoutId = null;
@@ -21,8 +30,8 @@
     window.addEventListener('resize', mobileHeight);
     mobileHeight();
   </script>
-  <script type="module" crossorigin src="/assets/index.88e00c26.js"></script>
-  <link rel="stylesheet" href="/assets/index.806b1478.css">
+  <script type="module" crossorigin src="/assets/index.60e44fc9.js"></script>
+  <link rel="stylesheet" href="/assets/index.395e14fc.css">
 </head>
 
 <body>
