react updated - self questioning block

--- a/templates/index.html
+++ b/templates/index.html
@@ -30,13 +30,14 @@
     window.addEventListener('resize', mobileHeight);
     mobileHeight();
   </script>
-  <script type="module" crossorigin src="/assets/index.60e44fc9.js"></script>
-  <link rel="stylesheet" href="/assets/index.395e14fc.css">
+  <script type="module" crossorigin src="/assets/index.5d99f46b.js"></script>
+  <link rel="stylesheet" href="/assets/index.0d187940.css">
 </head>
 
 <body>
   <div id="root"></div>
   <div id="modal-root"></div>
+  <div id="toast"></div>
   
 </body>
 
