react header meta title added DEV

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
-  <title>Chatty 익명채팅</title>
+  <title>Chatty 익명채팅 - DEV</title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CFJ6NBV11R"></script>
   <script>
