--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0" />
-  <title>Chatty 익명채팅 - DEV</title>
+  <title>Chatty 익명채팅</title>
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-CFJ6NBV11R"></script>
   <script>
@@ -30,8 +30,8 @@
     window.addEventListener('resize', mobileHeight);
     mobileHeight();
   </script>
-  <script type="module" crossorigin src="/assets/index.11cc669c.js"></script>
-  <link rel="stylesheet" href="/assets/index.3ea275fa.css">
+  <script type="module" crossorigin src="/assets/index.153c5fea.js"></script>
+  <link rel="stylesheet" href="/assets/index.6d4fc8bf.css">
 </head>
 
 <body>
